# Anti-Miner

./: CMakeLists.txt  README.md
src/: main.cpp
